# footytrackr

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MODELCARD.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
artifacts/: ablation_v3.csv  bias_correction_v3.json  calibration_deciles_bias_corrected_v3.csv  calibration_deciles_groupwise_v3.csv  calibration_deciles_v3.csv  error_analysis_bias_comparison_v3.csv  error_analysis_bias_corrected_v3.json  error_analysis_groupwise_bias_v3.json  error_analysis_groupwise_comparison_v3.csv  error_analysis_summary_v3.json  error_by_league_v3.csv  error_by_position_v3.csv  groupwise_smearing_v3.csv  metrics_v1.json  metrics_v2.json  metrics_v3.json  model_report_v3.json  model_report_v3.md  prediction_interval_summary_v3.json  ridge_top_coefficients_v1.csv  ridge_top_coefficients_v2.csv  top_overpredictions_v3.csv  top_underpredictions_v3.csv
examples/: experienced_midfielder_es1.json  veteran_defender_it1.json  young_striker_gb1.json  young_winger_l1.json
footytrackr/: __init__.py  api.py  cli.py  reporting.py
notebooks/: 01_club_performance_overview.ipynb
scripts/: 01_profile_raw.py  02_build_value_features.py  02_build_value_features_v2.py  02_build_value_features_v3.py  03_train_market_value.py  04_build_duckdb.py  06_error_analysis.py  07_bias_correction.py  08_groupwise_bias_correction.py  09_prediction_intervals.py  10_model_report.py  clean_club_games.py  clean_players.py  load_data.py
tests/: test_api.py  test_build_value_features_v2.py  test_cli.py  (+1 more)
(+3 files in other folders)
